# rust_code

./: tree.txt
amdgpu_monitor/: Cargo.toml
autoclicker/: Cargo.toml
bitmap_image/: bitmap_image.rs  bitmap_image_simple.rs
borrow_fuckery/: Cargo.toml
capture_network_packets/: Cargo.toml
create_png_in_rust/: Cargo.toml  a_letter.json  create_chars.js  create_png_in_rust.rs
dynamic_sized_structs/: Cargo.toml
enigo_example/: Cargo.toml  keydown.py
eval/: Cargo.toml
f32_wtf/: Cargo.toml
float_lesson/: Cargo.toml
image_blurer/: Cargo.toml  browser.js  image_blurer.js  o_param.json
image_manipulator/: Cargo.toml  f_o_param_test_rotate_overlay.module.js  f_o_param_test_rotate_overlay.module.json  o_param_test_blur.json  o_param_test_crop.json  o_param_test_example.json  o_param_test_flip.json  o_param_test_overlay.json  o_param_test_rotate.json  o_param_test_transformation_matrix copy.json  o_param_test_transformation_matrix.json
image_manipulator/src/: main.rs  main_exprtest.rs
keyboard_drum/: Cargo.toml
labyrinth_tiefensuche_graph/: Cargo.toml  get_text.html
labyrinth_tiefensuche_graph/src/: main.rs  test_module.rs  tmp.rs  tmp2.rs
library_lesson/: is_dependend_of_library.rs  libuseless.rlib  useless.rs
malloc_sine/: Cargo.toml
mouse_control/: Cargo.toml
mouse_control/src/: main.old2.rs  main.rs  main3.rs
parquet_test/: Cargo.toml  backup.py  class_tutorial.py  fitting.py  last_line_from_parquet.json  mergedfilter3.py  nptype  numpy_data_printed.json  o_config.json  python_download.py  python_iterate_array_test.py  read_parquet.py  readme.md  test.py  ztf_000228_zg_c09_q2_dr11.parquetbpjq3_vx.tmp  ztf_000228_zg_c15_q1_dr11.parquetlq22wh0r.tmp  ztf_000259_zr_c16_q3_dr11.parquet_filtered.npy  ztf_000259_zr_c16_q4_dr11.parquet_filtered.npy  ztf_000260_zr_c01_q1_dr11.parquet70kfydlb.tmp  ztf_000262_zg_c04_q1_dr11.parquetzvqvnc3d.tmp
parquet_test/filtered/: ztf_000377_zr_c16_q1_dr7.parquet_filtered.npy
parquet_test/irsa_ipac_data/: a_s_url_parq2.json  asdf.js  deno_get_links0.module.js  python_download_test.py  ztf_000202_zg_c13_q4_dr11.parquet
parquet_test/irsa_ipac_data/data/ZTF/: lc_dr11
parquet_test/irsa_ipac_data/data/ZTF/lc/lc_dr11/: README.txt
parquet_test/src/: artificial_test_data.json  fitting_original_lamiah.py  main.rs  plot_optimal_difference.py  range_1_to_1_test.py  read_npy_into_struct.rs  ztf_000722_zr_c07_q4_dr11.parquet_filtered.npy.parquet  ztf_000761_zr_c14_q3_dr11.parquet_filtered.npy
show_image_test/: Cargo.toml  get_text.js
show_image_test/src/: constants_chars_a_u8.rs  constants_chars_a_u8_big.rs  main.rs
(+187 files in other folders)
