[package]
name = "create_png_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

# rustc_serialize = "*"
num-complex = "*"
image = "*"
rand = "*"
[[bin]]
name = "create_png_in_rust"
path = "create_png_in_rust.rs"
