[package]
name = "image_blurrer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

text-to-png = "0.2.0"
image = "0.24.4"
serde_json = "1.0.85"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
woff2 = "0.3.0"
fontdue = "0.7.2"
eval = "0.4.3"  