[package]
name = "show_image_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"show-image" = "0.13.1"
"png" = "0.17.6"
# enigo = "0.0.14"
autopilot = "0.4.0"
rand = "0.8.5"
image = "0.24.4"
device_query = "1.1.1"
# ggez = "0.7.0"
# buttons = "0.3.1"
# ggez = "0.5.1"
# readmouse = "0.2.1"


# for measuring performance
# https://blog.anp.lol/rust/2016/07/24/profiling-rust-perf-flamegraph/
[profile.release]
debug = true