[package]
name = "mouse_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4"
inputbot = "0.5"
device_query = "0.1.0"

[dependencies.crossterm]
version = "0.23"
features = ["event-stream"] 
