[package]
name = "parquet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

parquet = "25.0.0"
serde_json = "1.0.87"
serde = {version = "1.0.87", features = ["derive"]}
# npy = "0.4.0"
# npy-derive = "0.4"
# ndarray-npy = "0.8.1"